the full screen feature push

--- a/index.html
+++ b/index.html
@@ -1,35 +1,3 @@
-j
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Infinite Canvas Notepad</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <div class="toolbar">
-        <input type="text" id="coordinateInput" placeholder="Enter coordinates (x,y)">
-        <button id="goToCoordinate">Go To Coordinate</button>
-        <button id="addNoteButton">Add Note</button>
-    </div>
-    <canvas id="notepadCanvas" width="800" height="600"></canvas>
-
-    <!-- Note Editor Modal -->
-    <div id="noteModal" class="modal">
-        <div class="modal-content">
-            <textarea id="noteContent" placeholder="Enter note content..."></textarea>
-            <button id="saveNote">Save</button>
-            <button id="cancelNote">Cancel</button>
-        </div>
-    </div>
-
-    <!-- Scripts -->
-    <script src="script.js"></script>
-</body>
-
-</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,6 +5,8 @@ j
     <meta charset="UTF-8">
     <title>Infinite Canvas Notepad</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpeg" href="./fav.jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -45,7 +15,7 @@ j
         <button id="goToCoordinate">Go To Coordinate</button>
         <button id="addNoteButton">Add Note</button>
     </div>
-    <canvas id="notepadCanvas" width="800" height="600"></canvas>
+    <canvas id="notepadCanvas"></canvas>
 
     <!-- Note Editor Modal -->
     <div id="noteModal" class="modal">
